--- a/index.html
+++ b/index.html
@@ -4,9 +4,182 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Second Assignment For MD NESAR MRIDHA</title>
+	<!-- Google Font -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+	<!-- Style CSS -->
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	
+	<!-- Header -->
+	<header class="header-area">
+		<div class="container">
+			<div class="header-nav-area">
+				<!-- Logo -->
+				<div class="site-logo">
+					<a href="">G3 Architects</a>
+				</div>
+				<!-- Navigation -->
+				<div class="nav">
+					<ul>
+						<li><a href="">Home</a></li>
+						<li><a href="">About</a></li>
+						<li><a href="">Contact Us</a></li>
+						<li><a href="">Login</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="hero-content-area">
+				<div class="hero-content">
+					<h2>Brand New <br> Group of Architects</h2>
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,by injected humour, or randomised words which don't look even</p>
+					<button class="primary-btn">Explore More</button>
+				</div>
+				<img src="images/banner.png" alt="">
+			</div>
+		</div>
+	</header>
+	<!-- Main -->
+	<main>
+		<!-- Our Features -->
+		<section class="container">
+			<div class="our-features-area">
+				<div class="features-image">
+					<img src="images/team1.png" alt="">
+					<img src="images/team2.png" alt="">
+					<img src="images/team3.png" alt="">
+					<img src="images/team4.png" alt="">
+				</div>
+				<div class="feature-content section-title">
+					<h2>Quick list of Our Features</h2>
+					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+					<button class="primary-btn">Explore More</button>
+				</div>
+			</div>
+		</section>
+		<!-- Love and Enjoy -->
+		<section class="container">
+			<div class="love-and-enjoy-area">
+				<div class="love-and-enjoy-feature-content">
+					<!-- Facts Heading  -->
+					<div class="section-title">
+						<h2>Features you will love & enjoy</h2>
+						<P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,by injected humour, or randomised words which don't look even.
+						</P>
+					</div>
+					<!-- Love and Enjoy Featurs Items -->
+					<div class="love-and-enjoy-feature-items">
+						<!-- Love and Enjoy Sinle Item -->
+						<div class="love-and-enjoy-single-items">
+							<h3>Dexktop & Mobile Version</h3>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+						<!-- Love and Enjoy Sinle Item -->
+						<div class="love-and-enjoy-single-items">
+							<h3>Drag & Drop Builder</h3>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,by injected humour, or randomised...........</p>
+						</div>
+						<!-- Love and Enjoy Sinle Item -->
+						<div class="love-and-enjoy-single-items">
+							<h3>Awesome Modern Design</h3>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+						<!-- Love and Enjoy Sinle Item -->
+						<div class="love-and-enjoy-single-items">
+							<h3>Super Easy to Edit</h3>
+							<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+						</div>
+					</div>
+				</div>
+				<div class="love-and-enjoy-feature-image">
+					<img src="images/architect.png" alt="">
+					<div class="love-enjoy-button">
+						<h3>10+Year</h3>
+						<p>Experience</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Some Facts -->
+		<section class="container">
+			<div class="some-facts-area">
+				<!-- Facts Heading  -->
+				<div class="section-title">
+					<h2>Some Facts</h2>
+					<P>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</P>
+				</div>
+				<!-- Facts Items -->
+				<div class="some-facts-items">
+					<!-- Facts Single Item -->
+					<div class="facts-single-item">
+						<img src="images/icons/ribon.png" alt="">
+						<h3>54</h3>
+						<p>Awards Winnings</p>
+					</div>
+					<!-- Facts Single Item -->
+					<div class="facts-single-item">
+						<img src="images/icons/projects.png" alt="">
+						<h3>1458</h3>
+						<p>Project Finished</p>
+					</div>
+					<!-- Facts Single Item -->
+					<div class="facts-single-item ">
+						<img src="images/icons/customers.png" alt="">
+						<h3>590</h3>
+						<p>Clients Worked</p>
+					</div>
+					<!-- Facts Single Item -->
+					<div class="facts-single-item">
+						<img src="images/icons/email.png" alt="">
+						<h3>22578</h3>
+						<p>Email Send</p>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Our Sponspors -->
+		<section class="container">
+			<div class="our-sponspors-area">
+				<!-- Sponspors Heading  -->
+				<div class="sponspors-heading section-title">
+					<h2>Our Sponspors</h2>
+					<P>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</P>
+				</div>
+				<!-- Sponspors Items -->
+				<div class="sponspors-items">
+					<!-- Sponspors Single Item -->
+					<div class="sponspors-single-item">
+						<img src="images/sponsors/spotify.png" alt="">
+					</div>
+					<!-- Sponspors Single Item -->
+					<div class="sponspors-single-item">
+						<img src="images/sponsors/amazon.png" alt="">
+					</div>
+					<!-- Sponspors Single Item -->
+					<div class="sponspors-single-item">
+						<img src="images/sponsors/google.png" alt="">
+					</div>
+					<!-- Sponspors Single Item -->
+					<div class="sponspors-single-item">
+						<img src="images/sponsors/telerama.png" alt="">
+					</div>
+					<!-- Sponspors Single Item -->
+					<div class="sponspors-single-item">
+						<img src="images/sponsors/figma.png" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+	</main>
+	<!-- Footer -->
+	<footer>
+		<section class="container">
+			<div class="footer-content">
+				<p>All rights reserved copyright@2023 startup landing page design</p>
+			</div>
+		</section>
+	</footer>
 </body>
 </html>
