--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<img src="images/team4.png" alt="">
 				</div>
 				<div class="feature-content section-title">
-					<h2>Quick list of Our Features</h2>
+					<h2><span class="thin-word">Quick list </span> of Our <br> <span>Features</span></h2>
 					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
 					<button class="primary-btn">Explore More</button>
 				</div>
