--- a/index.html
+++ b/index.html
@@ -172,6 +172,42 @@
 				</div>
 			</div>
 		</section>
+		<!-- Contact Us  -->
+		<section class="container">
+			<div class="contact-us-area">
+				<div class="contact-content-item">
+					<!--Section Title-->
+					<div class="section-title">
+						<h2>Let's Connect</h2>
+			
+						<p><strong>Phone:</strong> +98 74563210</p>
+			
+						<p><strong>Email:</strong> contact@email.com</p>
+			
+						<p><strong>Address:</strong> Bak-One Company<br />12345 Hollywood Bvld Street<br />Los Angeles, California
+						</p>
+					</div>
+					<!--/ Section Title-->
+			
+				</div>
+				<div class="contact-content-item">
+					<!--Section Title-->
+					<div class="section-title">
+						<h2>Let's Message Me</h2>
+						<form action="#">
+							<label for="name">Name</label>
+							<input id="name" type="text" placeholder="Type your name">
+							<label for="email">Email</label>
+							<input id="email" type="text" placeholder="Enter your Email">
+							<label for="message">Message</label>
+							<textarea name="" id="message" rows="5" placeholder="Write your Message"></textarea>
+							<input type="submit" class="btn-primary" value="Submit" />
+						</form>
+					</div>
+					<!--/ Section Title-->
+				</div>
+			</div>
+		</section>
 	</main>
 	<!-- Footer -->
 	<footer>
