button hover color

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 								<input id="email" type="text" placeholder="Enter your Email">
 								<label for="message">Message</label>
 								<textarea name="" id="message" rows="5" placeholder="Write your Message"></textarea>
-								<input type="submit" class="btn-primary" value="Submit" />
+								<input type="submit" class="primary-btn" value="Submit" />
 							</form>
 						</div>
 						<!--/ Section Title-->
